# dms-moi-workspace/modules/moi-api-handler/moi-api-handler-impl/rest-openapi.yaml
@@ -12,6 +12,19 @@ components:
         title:
           type: string
       type: object
+    JiraAPIHandler:
+      description: Represents an uploaded document.
+      properties:
+        id:
+          format: int64
+          type: integer
+        name:
+          type: string
+        mimeType:
+          type: string
+        folderName:
+          type: string
+      type: object
     DocumentResult:
       description: Represents an uploaded document.
       properties:
@@ -25,20 +38,6 @@ components:
         folderName:
           type: string
       type: object
-    JiraAPIHandler:
-      description: Represents Document handled for JIRA.
-      properties:
-        date:
-          format: date-time
-          type: string
-        id:
-          format: int64
-          type: integer
-        title:
-          type: string
-        ticketNumber:
-          type: string
-      type: object
 info:
   description: ""
   license:
@@ -48,6 +47,122 @@ info:
   version: v1.0
 openapi: 3.0.1
 paths:
+  "/uploadDocument":
+    post:
+      operationId: uploadMosipDocument
+      parameters:
+        - in: query
+          name: ModuleType
+          schema:
+            type: string
+        - in: query
+          name: ConsumerCode
+          schema:
+            type: string
+        - in: query
+          name: DocumentType
+          schema:
+            type: string
+        - in: query
+          name: IdentifierNumber
+          schema:
+            type: string
+        - in: query
+          name: Metadata
+          schema:
+            type: string
+        - in: query
+          name: PreviousModuleType
+          schema:
+            type: string
+        - in: query
+          name: PreviousIdentifier
+          schema:
+            type: string
+      requestBody:
+                content:
+                    multipart/form-data:
+                        schema:
+                            properties:
+                                document:
+                                    $ref: "#/components/schemas/MosipAPIHandler"
+                                file:
+                                    format: binary
+                                    type: string
+                            type: object
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: "#/components/schemas/DocumentResult"
+                type: array
+            application/xml:
+              schema:
+                items:
+                  $ref: "#/components/schemas/DocumentResult"
+                type: array
+          description: "Upload Mosip Documents"
+      tags: ["MosipAPIHandler"]
+  "/updateDocument":
+    post:
+      operationId: updateMosipDocument
+      parameters:
+        - in: query
+          name: ModuleType
+          schema:
+            type: string
+        - in: query
+          name: ConsumerCode
+          schema:
+            type: string
+        - in: query
+          name: DocumentType
+          schema:
+            type: string
+        - in: query
+          name: IdentifierNumber
+          schema:
+            type: string
+        - in: query
+          name: Metadata
+          schema:
+            type: string
+        - in: query
+          name: PreviousModuleType
+          schema:
+            type: string
+        - in: query
+          name: PreviousIdentifier
+          schema:
+            type: string
+      requestBody:
+                content:
+                    multipart/form-data:
+                        schema:
+                            properties:
+                                document:
+                                    $ref: "#/components/schemas/MosipAPIHandler"
+                                file:
+                                    format: binary
+                                    type: string
+                            type: object
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: "#/components/schemas/DocumentResult"
+                type: array
+            application/xml:
+              schema:
+                items:
+                  $ref: "#/components/schemas/DocumentResult"
+                type: array
+          description: "Upload Jira Documents"
+      tags: ["MosipAPIHandler"]
   "/uploadJiraDocument":
     post:
       operationId: uploadJiraDocument
@@ -74,7 +189,7 @@ paths:
                         schema:
                             properties:
                                 document:
-                                    $ref: "#/components/schemas/DocumentResult"
+                                    $ref: "#/components/schemas/JiraAPIHandler"
                                 file:
                                     format: binary
                                     type: string
@@ -85,12 +200,12 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: "#/components/schemas/JiraAPIHandler"
+                  $ref: "#/components/schemas/DocumentResult"
                 type: array
             application/xml:
               schema:
                 items:
-                  $ref: "#/components/schemas/JiraAPIHandler"
+                  $ref: "#/components/schemas/DocumentResult"
                 type: array
           description: "Upload Jira Documents"
-      tags: ["DocumentResult"]
+      tags: ["JiraAPIHandler"]
